fixed spacing issue on large screens for daily forecast container

--- a/src/App.css
+++ b/src/App.css
@@ -176,8 +176,7 @@ for the city search form */
     justify-content: start;
     overflow-x: scroll;
     scroll-behavior: smooth;
-    width: 100vw;
-    margin: 0 1rem;
+
   }
 
   .scroll-container {
@@ -185,7 +184,7 @@ for the city search form */
   }
 
   .scroll-left, .scroll-right {
-    opacity: 0.8;
+    opacity: 0.6;
     padding: 1rem 4rem;
     margin: 0 .5rem;
     color: #fff;
@@ -193,12 +192,23 @@ for the city search form */
     border: 3px solid var(--blue-1);
     border-radius: 0.75rem;
     font-size: 2.5rem;
+    animation: grow reverse;
   }
 
   .scroll-left:hover, .scroll-right:hover {
     background-color: var(--blue-2);
     cursor: pointer;
+    opacity: 1;
+    animation: grow 0.5s forwards;
   }
+
+  @keyframes grow {
+    0% {padding: 1rem 4rem;}
+
+    100% {padding: 1.4rem 5rem;}
+  }
+
+
 }
 
 /* Daily forecast style end */
